# kata

./: .clang-format  .gitignore  CMakeLists.txt  Caffe2调研.md  README.md  命名规范.md
include/kata/: alloc.h  args.h  fill.h  for_each.h  noncopyable.h  object_counter.h  scope_guard.h
kata/: kata_all.h  more_traits.h  pmath.h
kata/experimental/: any.h  function_traits.h
kata/more_traits/: at.h  binary.h  function_traits.h  if_else.h  is_all_same.h  is_contained.h  switch_case.h  type_count.h  type_list.h
kata/pattern/: multiton.h  singleton.h  slot_pool.h
kata/pmath/: abs.h  constant.h  factorial.h  max.h  min.h
kata/task/: message_bus.h  thread_pool.h
kata/text/: encoder.h  line.h
kata/utils/: any.h  check_group.h  lock.h  noncopyable.h  safe_delete.h  scope_guard.h
python/: README.md  main.py
python/alea/: __init__.py  net.py  rnn.py
samples/: CMakeLists.txt  pattern.cpp  task.cpp
test/: CMakeLists.txt  Print.h  Test.cpp  Test.h  TestGem.cpp  TestMoreTraits.cpp  TestPattern.cpp  TestSignalSlot.cpp  TestThreadPool.cpp  TestThreadPool.h  main.cpp  more_traits.cpp  pattern.cpp  pmath.cpp  print.h  task.cpp  text.cpp  utils.cpp
test/container/: TestAll.cpp  TestTypeDict.cpp  TestVarTypeDict.cpp
test/controller/: TestAll.cpp  TestAop.cpp  TestIoc.cpp
test/gem/: TestAll.cpp  TestGem.cpp
test/more_traits/: TestAll.cpp  TestFill.cpp  TestFunctionTraits.cpp  TestMoreTraits.cpp  TestTupleIndex.cpp
test/pattern/: TestAll.cpp  TestPattern.cpp  TestSingleton.cpp  TestVisitor.cpp
test/task/: TestAll.cpp  TestThreadPool.cpp  TestThreadPool.h
(+98 files in other folders)
